[package]
name = "retinai"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
dicom-dictionary-std = "0.9.0"
dicom-object = "0.9.0"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
stderrlog = "0.6.0"
tokio = { version = "1.48.0", features = ["rt", "macros", "rt-multi-thread"] }
walkdir = "2.5.0"
